Release v1.6.3 :: Java modules